// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadUnprocessedSidebars sidebars link 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "href": "https://github.com",
          "label": "category",
          "type": "link",
        },
      ],
      "label": "Test",
      "type": "category",
    },
  ],
}
`;

exports[`loadUnprocessedSidebars sidebars with category.collapsed property 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "collapsed": false,
          "collapsible": true,
          "items": Array [
            Object {
              "displayThisSidebar": true,
              "id": "doc1",
              "type": "doc",
            },
          ],
          "label": "Introduction",
          "type": "category",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "collapsed": false,
          "collapsible": true,
          "items": Array [
            Object {
              "displayThisSidebar": true,
              "id": "doc2",
              "type": "doc",
            },
          ],
          "label": "Powering MDX",
          "type": "category",
        },
      ],
      "label": "Reference",
      "type": "category",
    },
  ],
}
`;

exports[`loadUnprocessedSidebars sidebars with category.collapsed property at first level 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": false,
      "collapsible": true,
      "items": Array [
        Object {
          "displayThisSidebar": true,
          "id": "doc1",
          "type": "doc",
        },
      ],
      "label": "Introduction",
      "type": "category",
    },
    Object {
      "collapsed": false,
      "collapsible": true,
      "items": Array [
        Object {
          "displayThisSidebar": true,
          "id": "doc2",
          "type": "doc",
        },
      ],
      "label": "Powering MDX",
      "type": "category",
    },
  ],
}
`;

exports[`loadUnprocessedSidebars sidebars with deep level of category 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "displayThisSidebar": true,
          "id": "a",
          "type": "doc",
        },
        Object {
          "collapsed": true,
          "collapsible": true,
          "items": Array [
            Object {
              "collapsed": true,
              "collapsible": true,
              "items": Array [
                Object {
                  "displayThisSidebar": true,
                  "id": "c",
                  "type": "doc",
                },
                Object {
                  "collapsed": true,
                  "collapsible": true,
                  "items": Array [
                    Object {
                      "displayThisSidebar": true,
                      "id": "d",
                      "type": "doc",
                    },
                    Object {
                      "collapsed": true,
                      "collapsible": true,
                      "items": Array [
                        Object {
                          "displayThisSidebar": true,
                          "id": "e",
                          "type": "doc",
                        },
                      ],
                      "label": "deeper more more",
                      "type": "category",
                    },
                  ],
                  "label": "level 4",
                  "type": "category",
                },
              ],
              "label": "level 3",
              "type": "category",
            },
            Object {
              "displayThisSidebar": true,
              "id": "f",
              "type": "doc",
            },
          ],
          "label": "level 2",
          "type": "category",
        },
      ],
      "label": "level 1",
      "type": "category",
    },
  ],
}
`;

exports[`loadUnprocessedSidebars sidebars with first level not a category 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "displayThisSidebar": true,
          "id": "greeting",
          "type": "doc",
        },
      ],
      "label": "Getting Started",
      "type": "category",
    },
    Object {
      "displayThisSidebar": true,
      "id": "api",
      "type": "doc",
    },
  ],
}
`;

exports[`loadUnprocessedSidebars sidebars with known sidebar item type 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "displayThisSidebar": true,
          "id": "foo/bar",
          "type": "doc",
        },
        Object {
          "displayThisSidebar": true,
          "id": "foo/baz",
          "type": "doc",
        },
        Object {
          "href": "https://github.com",
          "label": "Github",
          "type": "link",
        },
        Object {
          "displayThisSidebar": false,
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "collapsible": true,
      "items": Array [
        Object {
          "displayThisSidebar": true,
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;
